[package]
name = "kaleidohash"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "auth"
path = "src/auth.rs"

[[bin]]
name = "kaleidohash"
path = "src/kaleidohash.rs"

[dependencies]
clap = "3.0.0-beta.2"
hex = "0.4.3"
indicatif = "0.16.2"
modulo = "0.1.2"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.8"

[features]
