[package]
name = "kaleidohash"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "auth"
path = "src/auth.rs"

[[bin]]
name = "kaleidohash"
path = "src/kaleidohash.rs"

[dependencies]
bincode = "1.3.3"
clap = "3.0.0-beta.2"
hex = "0.4.3"
human_format = "1.0.3"
indicatif = "0.16.2"
modulo = "0.1.2"
openssl = "0.10.36"
rand = "0.8.4"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.8"

[features]
